--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://druizcayuela.github.io/resume",
+  "homepage": "https://mjucedag.github.io/resume",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
